@@ -3,6 +3,7 @@ http://couchdb-python.googlecode.com/hg/?r=default
 (???, from branches/0.7.x)
 
  * Prevent `schema.ListField` objects from sharing the same default (issue 107).
+ * Added a `changes()` method to the `client.Database` class (issue 103).
 
 Version 0.6.1
 http://couchdb-python.googlecode.com/hg/?r=0.6.1
